# SettingsConfig

./: CMakeLists.txt  README.md  libconfig_install.sh  rebuild.sh
examples/: CMakeLists.txt  SettingsConfigTest.cpp  settings.cfg
include/SettingsConfig/: ISettingsConfig.h  ISettingsWindow.h  SettingsConfig.h  SettingsWindow.h
src/: CMakeLists.txt  Config.cmake.in  SettingsConfig.cpp  SettingsWindow.cpp
